--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,8 @@
     --primary: #21759c;
     --primaryLighter: #2e9bcd;
     --secondary: #e84e24;
-    /*--dark: #434341;*/
-    --dark: black;
+    --dark: #434341;
+    /*--dark: black;*/
 
 }
 
@@ -440,7 +440,7 @@ nav .logoU {
 
 /* Do an horizontal flip when you move the mouse over the flip box container */
 .flip-card:hover .flip-card-inner {
-  transform: rotateY(180deg);
+    transform: rotateY(180deg);
 }
 
 /* Position the front and back side */
@@ -831,7 +831,7 @@ nav .logoU {
 
 #réalisations .row .card2:nth-of-type(1) .card5,
 #réalisations .row .card2:nth-of-type(4) .card5,
-#réalisations .row .card2:nth-of-type(6) .card5{
+#réalisations .row .card2:nth-of-type(6) .card5 {
     background: url("../img/real.webp");
     background-position: center;
     background-size: cover;
@@ -851,7 +851,7 @@ nav .logoU {
     background-size: cover;
 }
 
- #réalisations .courses-overlay {
+#réalisations .courses-overlay {
     padding: 10px;
 }
 
