--- a/css/besoins.css
+++ b/css/besoins.css
@@ -1,6 +1,9 @@
 /***BESOINS***/
 #besoins {
     margin: 0 auto !important;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .outils {
@@ -53,7 +56,8 @@
 }
 
 .courses-item img {
-    min-height: 50%;
+    /*min-height: 50%;*/
+    height: 100% !important;
     width: 100% !important;
     /*height: 200px;*/
 }
@@ -71,7 +75,9 @@
 .card {
     background-color: var(--primary);
     padding: 15px !important;
-    height: 100%;
+    /*height: 100%;*/
+    height: 175px;
+    max-height: 175px;
     display: flex;
     flex-direction: column;
 }
@@ -82,7 +88,7 @@
 }
 
 #besoins .card2 {
-    margin-top: 50px;
+    margin: 50px 0 20px 0;
 }
 
 .courses-item:hover {
@@ -114,11 +120,10 @@
 }
 
 .toolButton {
+    align-self: center !important;
     max-width: 80%;
     width: 80%;
-
-    margin: auto;
-    margin-top: 50px;
+    margin: 50px auto !important;
     min-height: 75px;
     padding: 20px;
     font-size: 22px;
