--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 @import "./footer.css";
 @import "./anim.css";
 @import "./responsive.css";
+@import "./ressources.css";
 
 /*Color Variables*/
 :root {
