working on optimise section in ressources.html 2

--- a/css/ressources.css
+++ b/css/ressources.css
@@ -7,6 +7,7 @@
 	padding: 15px;
 	margin-bottom: 50px;
 }
+
 #optimiser .container h1 {
 	/*width: 100% !important;*/
 	text-align: center;
@@ -16,6 +17,7 @@
 	text-align: justify !important;
 	padding: 2px 50px;
 	color: black;
+	margin: 0;
 }
 .toolWrapper {
 	margin: 50px auto;
@@ -26,43 +28,68 @@
 .toolWrapper:nth-of-type(odd) {
 	flex-direction: row-reverse;
 }
-/*
 .toolWrapper:nth-of-type(odd) button {
 	right: unset !important;
 	left: 0 !important;
 	border-radius: 0 15px 0 0 !important;
 }
-*/
 .partA {
 	flex: 1;
+	/*position: relative !important;*/
+	padding: 10px;
+	background: var(--primary);
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 .partA2 {
 	flex: 0.1;
 }
 .partB {
-	flex: 3;
+	flex: 4;
 	background: url("../img/bckg2.webp"), var(--light);
 	background-position: center;
 	background-size: cover;
 	padding: 15px;
-	position: relative !important;
+	/*position: relative !important;*/
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
 
-.partB button {
-	position: absolute !important;
-	bottom: 0px !important;
-	right: 0px !important;
+#optimiser button {
+	/*position: absolute !important;*/
+	/*bottom: -5px !important;
+	right: -5px !important;*/
+	/*width: 100% !important;*/
+	/*bottom: 0px !important;
+	right: 0px !important;*/
 	background-color: var(--primary) !important;
-	width: fit-content !important;
+	/*width: fit-content !important;*/
+	width: 90% !important;
 	padding: 13px !important;
-	margin: 0 !important;
+	/*margin: 0 !important;*/
+	justify-self: center !important;
+	align-self: center !important;
+
+	margin: auto !important;
 	color: white !important;
 	transition: 0.4s !important;
-	border-radius: 15px 0 0 0 !important;
+
+	/*border: 2px solid white !important;*/
+	/*border-radius: 15px 0 0 0 !important;*/
 }
 
-.partB button:hover {
+#optimiser button:hover {
 	background-color: var(--secondary) !important;
 	pointer: cursor;
 	transition: 0.4s !important;
 }
+/*
+#optimiser .partA:hover,
+#optimiser .partA:hover button {
+	background-color: var(--secondary) !important;
+	transition: 0.4s !important;
+}
+*/
