--- a/css/ressources.css
+++ b/css/ressources.css
@@ -9,7 +9,6 @@
 }
 
 #optimiser .container h1 {
-	/*width: 100% !important;*/
 	text-align: center;
 	margin: 15px auto 50px auto;
 }
@@ -25,71 +24,55 @@
 	justify-content: space-between;
 }
 
-.toolWrapper:nth-of-type(odd) {
-	flex-direction: row-reverse;
-}
-.toolWrapper:nth-of-type(odd) button {
-	right: unset !important;
-	left: 0 !important;
-	border-radius: 0 15px 0 0 !important;
-}
 .partA {
 	flex: 1;
-	/*position: relative !important;*/
-	padding: 10px;
+	padding: 3px;
 	background: var(--primary);
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	transform: scale(1);
+	transition: 0.4s;
 }
 .partA2 {
 	flex: 0.1;
 }
 .partB {
-	flex: 4;
+	flex: 3;
 	background: url("../img/bckg2.webp"), var(--light);
 	background-position: center;
 	background-size: cover;
 	padding: 15px;
-	/*position: relative !important;*/
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 }
-
 #optimiser button {
-	/*position: absolute !important;*/
-	/*bottom: -5px !important;
-	right: -5px !important;*/
-	/*width: 100% !important;*/
-	/*bottom: 0px !important;
-	right: 0px !important;*/
-	background-color: var(--primary) !important;
-	/*width: fit-content !important;*/
-	width: 90% !important;
-	padding: 13px !important;
-	/*margin: 0 !important;*/
+	background: url("../img/bckg2.webp"), var(--primary);
+	width: 100% !important;
+	padding: 10px 0 !important;
 	justify-self: center !important;
 	align-self: center !important;
-
 	margin: auto !important;
 	color: white !important;
 	transition: 0.4s !important;
-
-	/*border: 2px solid white !important;*/
-	/*border-radius: 15px 0 0 0 !important;*/
+	pointer-events: none !important;
 }
-
-#optimiser button:hover {
-	background-color: var(--secondary) !important;
-	pointer: cursor;
-	transition: 0.4s !important;
+.toolWrapper:nth-of-type(odd) {
+	flex-direction: row-reverse;
 }
-/*
-#optimiser .partA:hover,
-#optimiser .partA:hover button {
-	background-color: var(--secondary) !important;
-	transition: 0.4s !important;
+.toolWrapper:nth-of-type(odd) .partA,
+.toolWrapper:nth-of-type(odd) .partA button {
+	background: url("../img/bckg2.webp"), var(--secondary) !important;
 }
-*/
+.partA:hover,
+.partA:hover button {
+	transform: scale(1.05);
+	background: url("../img/bckg2.webp"), var(--secondary) !important;
+}
+.toolWrapper:nth-of-type(odd) .partA:hover,
+.toolWrapper:nth-of-type(odd) .partA:hover button {
+	transform: scale(1.05);
+	background: url("../img/bckg2.webp"), var(--primary) !important;
+}
