Ressources page : DONE, Basic Contact page : DONE, going to work on Contact form from team template

--- a/css/besoins.css
+++ b/css/besoins.css
@@ -130,6 +130,7 @@
     font-size: 22px;
     background-color: var(--secondary);
     transition: 0.4s;
+    margin-bottom: 0 !important;
 }
 
 .toolButton:hover {
