workin on texts, going to start projects cards

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@
 @import "./footer.css";
 @import "./anim.css";
 @import "./ressources.css";
+@import "contact.css";
+
 @import "z-responsive.css";
 
 /*Color Variables*/
